[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/object/attacking_tower/assets/Towers_prev_aoe2.png" type="Texture" id=1]
[ext_resource path="res://src/object/attacking_tower/attacking_tower.gd" type="Script" id=2]
[ext_resource path="res://src/unit/rangers/bomber/bomber.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 10 )

[node name="attacking_tower" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="bomber" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -64 )
speed = 0
strenght = 100
use_your_range = false

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -40, -56 )
scale = Vector2( 0.518242, 0.458126 )
texture = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="hp" type="TextEdit" parent="."]
margin_left = -32.0
margin_top = -184.0
margin_right = 40.0
margin_bottom = -144.0
text = "hp: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -24, 0, -24, 16, 0, 24, 24, 16, 24, 0 )

[node name="right_range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_range"]
position = Vector2( 128, 8 )
shape = SubResource( 2 )

[node name="left_range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_range"]
position = Vector2( -128, 8 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_base_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_base_body_exited"]
[connection signal="bomber_can_fire" from="." to="bomber" method="_on_attacking_tower_bomber_can_fire"]
[connection signal="bomber_cant_fire" from="." to="bomber" method="_on_attacking_tower_bomber_cant_fire"]
[connection signal="body_entered" from="right_range" to="." method="_on_right_range_body_entered"]
[connection signal="body_entered" from="right_range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="right_range" to="." method="_on_right_range_body_exited"]
[connection signal="body_entered" from="left_range" to="." method="_on_left_range_body_entered"]
[connection signal="body_exited" from="left_range" to="." method="_on_left_range_body_exited"]
